# Scaler-final

./: .dockerignore  .gitignore  Dockerfile  README.md  inference.py  openenv.yaml  pyproject.toml  requirements.txt
app/: api.py  dataset.py  env.py  grader.py  models.py  parser.py  reward.py
server/: __init__.py  app.py
static/: app.js  index.html  script.js  style.css
